--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 			<div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
 				<ul class="nav navbar-nav">
 
-					<li class="menuItem"><a href="#whatis">What is?</a></li>
-					<li class="menuItem"><a href="#useit">Use It</a></li>
+					<li class="menuItem"><a href="#whatis">关键词</a></li>
+					<li class="menuItem"><a href="#useit">研究背景</a></li>
 					<li class="menuItem"><a href="#screen">Screenshot</a></li>
 					<li class="menuItem"><a href="#credits">Credits</a></li>
 				</ul>
@@ -163,12 +163,12 @@
             <div class="row">
 
 				<div class="col-sm-6 pull-right wow fadeInRightBig">
-                    <img class="img-responsive " src="img/ipad.png" alt="">
+                    <img class="img-responsive " src="img/表情.jpg" alt="">
                 </div>
 
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">
                     <h3 class="section-heading">什么是面部表情</h3>
-                    <br><br>
+                    <br/>
                     <p class="lead">
 						面部表情是情绪外部表现的最主要的方面，它通过眼部肌肉、颜面肌肉和口部肌肉的变化来表现各种情绪状态。根据的研究在人类的日常交流中，通过语言传递的信息仅占信息总量的7%，而通过面部表情传递的信息却达到总信息量的55%。
 					</p>
@@ -204,22 +204,47 @@
                 </div>
 
                 <div class="col-sm-6 wow fadeInRightBig"  data-animation-delay="200">
-                    <h3 class="section-heading">Drag Gallery</h3>
-            <div class="sub-title lead3">Lorem ipsum dolor sit atmet sit dolor greand fdanrh<br> sdfs sit atmet sit dolor greand fdanrh sdfs</div>
+                    <h3 class="section-heading">面部表情的相关研究</h3>
+            <div class="sub-title lead3">这一部分先放上去吧，之后再改内容可以吗喵</div>
                     <p class="lead">
-            In his igitur partibus duabus nihil erat, quod Zeno commuta rest gestiret.
-            Sed virtutem ipsam inchoavit, nihil ampliusuma. Scien tiam pollicentur,
-            uam non erat mirum sapientiae lorem cupido
-            patria esse cariorem. Quae qui non vident, nihilamane umquam magnum ac cognitione.
-
+                      面部表情的跨文化一致性硏究
+                      <br />
+              艾克曼等人的早期研究。为了考察面部表情是否具有跨文化一致性，艾克曼和弗里森来到位于新几内亚东南部的高原为他们的研究寻找被试。在那里生活的人除了本族人的面部表情外，未曾接触过来自其他文化的面部表情。该研究的目的是考察处于前文明时期的人们能否和来自东方文明的人们一样，从相同的面部表情中识别出相同的情绪含义。结果表明，识别情绪的能力既不存在性别差异，也不存在年龄差异；处于前文明时代的被试与西方文化下的被试在表情识别率方面不存在显著的差异；但被试在辨别恐惧和惊奇时的错误率较高。这一研究有利的证明了情绪表达和识别的先天性和跨文化一致性。
+                     <br />
+                     <br />
+                     面部表情的文化差异性研究
+                     <br />
+                     基本情绪的表现具有先天遗传性，但它们的具体表达却受到社会文化因素的制约，复杂情绪的表达更是如此。
             </p>
-
-            <p><a class="btn btn-embossed btn-primary" href="#" role="button">View Details</a>
-            <a class="btn btn-embossed btn-info" href="#" role="button">Visit Website</a></p>
             </div>
 
 			</div>
         </div>
+    </div>
+
+    <div class="content-section-a">
+
+        <div class="container">
+
+             <div class="row">
+
+        <div class="col-sm-6 pull-right wow fadeInRightBig">
+                    <img class="img-responsive " src="img/表情2.jpg" alt="">
+                </div>
+
+                <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">
+                    <h3 class="section-heading">经典情绪启动范式</h3>
+                    <p class="lead">  情绪冲突的研究范式主要有情绪Stroop范式、情绪词—面孔Stroop范式、经典情绪启动范式、情绪Flanker范式和一些其他冲突研究范式。这里主要介绍本实验参考的经典情绪启动范式。
+                    <br />
+                    <br />
+在经典的情绪启动实验中，作为启动刺激的情绪词与作为目标刺激的情绪词，或者具有相同的情绪价，如美好—鲜花；或者具有不同的情绪价，如美好—野兽。结果通常会发现情绪启动效应，即个体对一致条件下的目标词的反应要显著快于不一致条件。
+
+          </p>
+
+        </div>
+            </div>
+        </div>
+
     </div>
 
     <div id="screen" class="content-section-b">
