--- a/index.html
+++ b/index.html
@@ -68,8 +68,16 @@
 
 	<!-- NavBar-->
 	<nav class="navbar-default" role="navigation">
-		<div class="container">
-			<div class="navbar-header">
+    <div class="container">
+      <img class="rotate" src="img/logo.png" alt="Generic placeholder image" width="66" height="66">
+      <img class="rotate" src="img/logo.png" alt="Generic placeholder image" width="66" height="66">
+      <img class="rotate" src="img/logo.png" alt="Generic placeholder image" width="66" height="66">
+      <img class="rotate" src="img/logo.png" alt="Generic placeholder image" width="66" height="66">
+      <img class="rotate" src="img/logo.png" alt="Generic placeholder image" width="66" height="66">
+      <img class="rotate" src="img/logo.png" alt="Generic placeholder image" width="66" height="66">
+      <img class="rotate" src="img/logo.png" alt="Generic placeholder image" width="66" height="66">
+      <img class="rotate" src="img/logo.png" alt="Generic placeholder image" width="66" height="66">
+      <div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
@@ -83,7 +91,7 @@
 				<ul class="nav navbar-nav">
 
 					<li class="menuItem"><a href="#whatis">关键词</a></li>
-					<li class="menuItem"><a href="#useit">研究背景</a></li>
+					<li class="menuItem"><a href="#useit">实验背景知识</a></li>
 					<li class="menuItem"><a href="#screen">Screenshot</a></li>
 					<li class="menuItem"><a href="#credits">Credits</a></li>
 				</ul>
@@ -173,7 +181,7 @@
 						面部表情是情绪外部表现的最主要的方面，它通过眼部肌肉、颜面肌肉和口部肌肉的变化来表现各种情绪状态。根据的研究在人类的日常交流中，通过语言传递的信息仅占信息总量的7%，而通过面部表情传递的信息却达到总信息量的55%。
 					</p>
 
-				</div>
+				        </div>
             </div>
         </div>
         <!-- /.container -->
@@ -181,45 +189,36 @@
 
     <div class="content-section-b">
 
-		<div class="container">
+    <div class="container">
             <div class="row">
                 <div class="col-sm-6 wow fadeInLeftBig">
                      <div id="owl-demo-1" class="owl-carousel">
-						<a href="img/iphone.png" class="image-link">
-							<div class="item">
-								<img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
-							</div>
-						</a>
-						<a href="img/iphone.png" class="image-link">
-							<div class="item">
-								<img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
-							</div>
-						</a>
-						<a href="img/iphone.png" class="image-link">
-							<div class="item">
-								<img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
-							</div>
-						</a>
-					</div>
+            <a href="img/iphone.png" class="image-link">
+              <div class="item">
+                <img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
+              </div>
+            </a>
+            <a href="img/iphone.png" class="image-link">
+              <div class="item">
+                <img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
+              </div>
+            </a>
+            <a href="img/iphone.png" class="image-link">
+              <div class="item">
+                <img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
+              </div>
+            </a>
+          </div>
                 </div>
 
                 <div class="col-sm-6 wow fadeInRightBig"  data-animation-delay="200">
                     <h3 class="section-heading">面部表情的相关研究</h3>
-            <div class="sub-title lead3">这一部分先放上去吧，之后再改内容可以吗喵</div>
                     <p class="lead">
-                      面部表情的跨文化一致性硏究
-                      <br />
-                      <br />
-              艾克曼等人的早期研究。为了考察面部表情是否具有跨文化一致性，艾克曼和弗里森来到位于新几内亚东南部的高原为他们的研究寻找被试。在那里生活的人除了本族人的面部表情外，未曾接触过来自其他文化的面部表情。该研究的目的是考察处于前文明时期的人们能否和来自东方文明的人们一样，从相同的面部表情中识别出相同的情绪含义。结果表明，识别情绪的能力既不存在性别差异，也不存在年龄差异；处于前文明时代的被试与西方文化下的被试在表情识别率方面不存在显著的差异；但被试在辨别恐惧和惊奇时的错误率较高。这一研究有利的证明了情绪表达和识别的先天性和跨文化一致性。
-                     <br />
-                     <br />
-                     面部表情的文化差异性研究
-                     <br />
-                     基本情绪的表现具有先天遗传性，但它们的具体表达却受到社会文化因素的制约，复杂情绪的表达更是如此。
-            </p>
-            </div>
+                      在情绪研究中，面部表情一直是频繁研究的内容。乔建中等人的研究表明，面部表情判别能力在小学阶段已相当完善，然而表情强度的判别能力发展仅体现在对高强度表情的判别中，在中、低强度水平上，大、中、小学生均不能对表情本身所包含的强度以及表情之间的强度差异进行足够的分辨。邱方晖等人的研究发现攻击性个体更倾向于将模糊表情识别为愤怒表情；抑郁症患者存在面部表情识别障碍；社交焦虑者存在面部表情加工的缺陷。Jodene Goldenring Fine等人的脑科学研究表明，在面对积极的情感照片时，在男性前扣带回，内侧额回，额上回和颞上回等的激活比女性更强烈，而在面对消极的情感照片时没有出现这样的结果。本实验中我们将探究表情图片与词语匹配的性别差异和情商差异。
+                   </p>
+               </div>
 
-			</div>
+           </div>
         </div>
     </div>
 
@@ -234,18 +233,53 @@
                 </div>
 
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">
-                    <h3 class="section-heading">经典情绪启动范式</h3>
-                    <p class="lead">  情绪冲突的研究范式主要有情绪Stroop范式、情绪词—面孔Stroop范式、经典情绪启动范式、情绪Flanker范式和一些其他冲突研究范式。这里主要介绍本实验参考的经典情绪启动范式。
-                    <br />
-                    <br />
-在经典的情绪启动实验中，作为启动刺激的情绪词与作为目标刺激的情绪词，或者具有相同的情绪价，如美好—鲜花；或者具有不同的情绪价，如美好—野兽。结果通常会发现情绪启动效应，即个体对一致条件下的目标词的反应要显著快于不一致条件。
-
+                    <h3 class="section-heading">什么是情绪启动效应？</h3>
+                    <p class="lead"> 情绪启动(affective priming)是指对在评价上处于两极的目标刺激而言，个体对其做出评价的时间与准确性受到其前面的启动刺激性质的调节，当启动刺激和目标刺激的性质相一致时，个体对目标刺激的反应就会更快、更准确。而当启动刺激与目标刺激性质不一致时，个体对目标刺激的反应就较慢，错误率也较高。启动效应证实了人类拥有非条件性地、自动对传入刺激进行评价的能力。情绪启动效应(affective priming effect)指的是个体先行加工具有一定情绪意义的刺激后, 后继加工也易于蒙上相应的情绪色彩。
           </p>
 
         </div>
             </div>
         </div>
 
+    </div>
+
+    <div class="content-section-b">
+
+    <div class="container">
+            <div class="row">
+                <div class="col-sm-6 wow fadeInLeftBig">
+                     <div id="owl-demo-2" class="owl-carousel">
+            <a href="img/iphone.png" class="image-link">
+              <div class="item">
+                <img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
+              </div>
+            </a>
+            <a href="img/iphone.png" class="image-link">
+              <div class="item">
+                <img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
+              </div>
+            </a>
+            <a href="img/iphone.png" class="image-link">
+              <div class="item">
+                <img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
+              </div>
+            </a>
+          </div>
+                </div>
+
+                <div class="col-sm-6 wow fadeInRightBig"  data-animation-delay="200">
+                    <h3 class="section-heading">经典情绪启动范式</h3>
+                    <p class="lead">
+                      情绪冲突的研究范式主要有情绪Stroop范式、情绪词—面孔Stroop范式、经典情绪启动范式、情绪Flanker范式和一些其他冲突研究范式。这里主要介绍本实验参考的经典情绪启动范式。
+                      <br/>
+                     </br/>
+在经典的情绪启动实验中，作为启动刺激的情绪词与作为目标刺激的情绪词，或者具有相同的情绪价，如美好—鲜花；或者具有不同的情绪价，如美好—野兽。结果通常会发现情绪启动效应，即个体对一致条件下的目标词的反应要显著快于不一致条件。
+
+            </p>
+            </div>
+
+      </div>
+        </div>
     </div>
 
     <div id="screen" class="content-section-b">
@@ -434,26 +468,19 @@
   <div  class="content-section-c ">
     <div class="container">
       <div class="row">
-      <div class="col-md-6 col-md-offset-3 text-center wrap_title white">
-        <h2>Get Live Updates</h2>
-        <p class="lead" style="margin-top:0">A special thanks to Death.</p>
+       <div class="col-md-6 col-md-offset-3 text-center wrap_title white">
+        <h3>参考文献</h3>
+        <p align="left" class="lead" style="margin-top:0" >
+          <br>方平, 陈满琪, & 姜媛. (2006). 情绪启动研究的实验范式. <i/> 心理科学 , 29</i/>(6), 1396-1399.
+          <br>吕勇, 张伟娜, & 沈德立. (2010). 不同愉悦度面孔阈下情绪启动效应:来自ERP的证据. <i/>心理学报, 42</i/>(9), 929-938.
+          <br>刘晶莹. (2012). <i/>情绪冲突条件下的面部表情识别研究</i/>. (Doctoral dissertation, 西南大学).
+          <br>乔建中. (1998). 表情判别能力的发展特点与影响因素. <i/>心理科学,</i/> 52-56.
+          <br>邱方晖, 罗跃嘉, & 贾世伟. (2015). 面部表情的类别知觉及其个体差异. <i/>心理科学进展, 23</i/>(6), 946-958.
+          <br>蚁金瑶, 钟明天, 罗英姿, 凌宇, & 姚树桥. (2007). 情绪图片的阈下启动效应.<i/> 中国临床心理学杂志, 15</i/>(3), 304-307.
+          <br>Fine, J. G., Semrud-Clikeman, M., & Zhu, D. C. (2009). Gender differences in bold activation to face photographs and video vignettes. <i/>Behavioural Brain Research, 201</i/>(1), 137-146.
+          <br>Huang, J., Chan, R. C., Gollan, J. K., Liu, W., Ma, Z., & Li, Z., et al. (2011). Perceptual bias of patients with schizophrenia in morphed facial expression. <i/>Psychiatry Research, 185</i/>(1-2), 60.
+        </p>
        </div>
-      <div class="mockup-content">
-          <div class="morph-button wow pulse morph-button-inflow morph-button-inflow-1">
-            <button type="button "><span>Subscribe to our Newsletter</span></button>
-            <div class="morph-content">
-              <div>
-                <div class="content-style-form content-style-form-4 ">
-                  <h2 class="morph-clone">Subscribe to our Newsletter</h2>
-                  <form>
-                    <p><label>Your Email Address</label><input type="text"/></p>
-                    <p><button>Subscribe me</button></p>
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </div>
