--- a/index.html
+++ b/index.html
@@ -50,17 +50,22 @@
 			<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">面部表情</h1>
 			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">本实验采用表情图片与词语匹配的方式和认知心理学的启动实验范式</h3>
 			<ul class="list-inline intro-social-buttons">
-				<li><a href="https://www.baidu.com/s?ie=utf-8&f=3&rsv_bp=1&tn=site888_3_pg&wd=%E5%93%88%E5%93%88%E5%93%88&oq=%25E9%25AB%2598%25E6%25B8%2585%25E5%25A4%25A7%25E5%259B%25BE&rsv_pq=d57b44ac0000e722&rsv_t=9a34D%2FXV0sDFTpIgyVeyvcsy2oDj9hRi91QonCGeg15VmTNBdSybxjYAPmIvvJXDwISx&rqlang=cn&rsv_enter=0&rsv_sug3=4&rsv_sug1=2&rsv_sug7=100&prefixsug=%25E5%2593%2588%25E5%2593%2588%25E5%2593%2588&rsp=0&inputT=1630&rsv_sug4=1630" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="0.8s"><span class="network-name">进入问卷</span></a>
+				<li><a href="https://bnupsych.asia.qualtrics.com/jfe/form/SV_1Opxjxh6Z7OAfFr" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="0.8s" target="_blank" ><span class="network-name" >进入问卷</span></a>
 				</li>
-
-				<li id="download" ><a href="https://www.baidu.com/s?ie=utf-8&f=8&rsv_bp=1&tn=site888_3_pg&wd=%E5%95%A6%E5%95%A6%E5%95%A6&oq=%25E5%2593%2588%25E5%2593%2588%25E5%2593%2588&rsv_pq=b91452fc0002c4f8&rsv_t=e736TWDxlN0%2F91aIkoJnEo9HE628e9sH9H0OoB2cjXR8qTcTCcrurwE1%2BvkKzuUzYfQg&rqlang=cn&rsv_enter=1&rsv_sug3=15&rsv_sug1=9&rsv_sug7=100&bs=%E5%93%88%E5%93%88%E5%93%88" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.2s"><span class="network-name">进入实验</span></a>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<li id="download" ><a href="https://www.baidu.com/s?ie=utf-8&f=8&rsv_bp=1&tn=site888_3_pg&wd=%E5%95%A6%E5%95%A6%E5%95%A6&oq=%25E5%2593%2588%25E5%2593%2588%25E5%2593%2588&rsv_pq=b91452fc0002c4f8&rsv_t=e736TWDxlN0%2F91aIkoJnEo9HE628e9sH9H0OoB2cjXR8qTcTCcrurwE1%2BvkKzuUzYfQg&rqlang=cn&rsv_enter=1&rsv_sug3=15&rsv_sug1=9&rsv_sug7=100&bs=%E5%93%88%E5%93%88%E5%93%88" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.2s" target="_blank" ><span class="network-name" >进入实验</span></a>
 				</li>
+        <br />
+        <br />
+        <img src="img/qr1.png" alt="QR code" width="150" height="150">
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <img src="img/qr1.png" alt="QR code" width="150" height="150">
 			</ul>
 		</div>
         <!-- /.container -->
 		<div class="col-xs-12 text-center abcen wow fadeIn">
 			<div class="button_down ">
-				<a class="imgcircle wow bounceInUp" data-wow-duration="1.5s"  href="#whatis"> <img class="img_scroll" src="img/icon/circle.png" alt=""> </a>
+				<a class="imgcircle wow bounceInUp" data-wow-duration="1.5s"  href="#关键词"> <img class="img_scroll" src="img/icon/circle.png" alt=""> </a>
 			</div>
 		</div>
     </div>
@@ -69,8 +74,6 @@
 	<!-- NavBar-->
 	<nav class="navbar-default" role="navigation">
     <div class="container">
-      <img class="rotate" src="img/logo.png" alt="Generic placeholder image" width="66" height="66">
-      <img class="rotate" src="img/logo.png" alt="Generic placeholder image" width="66" height="66">
       <img class="rotate" src="img/logo.png" alt="Generic placeholder image" width="66" height="66">
       <img class="rotate" src="img/logo.png" alt="Generic placeholder image" width="66" height="66">
       <img class="rotate" src="img/logo.png" alt="Generic placeholder image" width="66" height="66">
@@ -90,10 +93,10 @@
 			<div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
 				<ul class="nav navbar-nav">
 
-					<li class="menuItem"><a href="#whatis">关键词</a></li>
-					<li class="menuItem"><a href="#useit">实验背景知识</a></li>
-					<li class="menuItem"><a href="#screen">Screenshot</a></li>
-					<li class="menuItem"><a href="#credits">Credits</a></li>
+					<li class="menuItem"><a href="#关键词">关键词</a></li>
+					<li class="menuItem"><a href="#实验背景知识">实验背景知识</a></li>
+					<li class="menuItem"><a href="#实验目的与实验设计">实验目的与设计</a></li>
+					<li class="menuItem"><a href="#结果分析与讨论">结果分析与讨论</a></li>
 				</ul>
 			</div>
 
@@ -101,12 +104,12 @@
 	</nav>
 
 	<!-- What is -->
-	<div id="whatis" class="content-section-b" style="border-top: 0">
+	<div id="关键词" class="content-section-b" style="border-top: 0">
 		<div class="container">
 
 			<div class="col-md-6 col-md-offset-3 text-center wrap_title">
-				<h2>What is?</h2>
-				<p class="lead" style="margin-top:0">A special thanks to Death.</p>
+				<h2>关键词</h2>
+				<p class="lead" style="margin-top:0">本研究的六个要素</p>
 
 			</div>
 
@@ -114,23 +117,19 @@
 
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img class="rotate" src="img/icon/1197701.png" alt="Generic placeholder image">
-				  <h3>Follow Me</h3>
-				  <p class="lead">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. </p>
-
+				  <h3>面部表情</h3>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 
 				<div class="col-sm-4 wow fadeInDown text-center">
-				  <img  class="rotate" src="img/icon/1197684.png" alt="Generic placeholder image">
-				   <h3>Gallery</h3>
-				   <p class="lead">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. </p>
+				  <img  class="rotate" src="img/icon/1197678.png" alt="Generic placeholder image">
+				   <h3>情绪启动效应</h3>
 				   <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/icon/1197676.png" alt="Generic placeholder image">
-				   <h3>Retina</h3>
-					<p class="lead">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. </p>
+				   <h3>性别</h3>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 
@@ -140,22 +139,19 @@
 
 				<div class="col-sm-4  wow fadeInDown text-center">
 				  <img class="rotate" src="img/icon/1197682.png" alt="Generic placeholder image">
-				  <h3>Responsive</h3>
-				  <p class="lead">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. </p>
+				  <h3>情商</h3>
 				 <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/icon/1197688.png" alt="Generic placeholder image">
-				   <h3>Google</h3>
-				   <p class="lead">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. </p>
+				   <h3>情绪识别</h3>
 				   <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 
         <div class="col-sm-4 wow fadeInDown text-center">
-				  <img  class="rotate" src="img/icon/1197678.png" alt="Generic placeholder image">
-				   <h3>Bootstrap</h3>
-				 <p class="lead">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. </p>
+				  <img  class="rotate" src="img/icon/1197684.png" alt="Generic placeholder image">
+				   <h3>描述性情绪词语</h3>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 
@@ -164,7 +160,7 @@
 	</div>
 
 	<!-- Use it -->
-    <div id ="useit" class="content-section-a">
+    <div id ="实验背景知识" class="content-section-a">
 
         <div class="container">
 
@@ -193,19 +189,19 @@
             <div class="row">
                 <div class="col-sm-6 wow fadeInLeftBig">
                      <div id="owl-demo-1" class="owl-carousel">
-            <a href="img/iphone.png" class="image-link">
+            <a href="img/slide/表情1.jpg" class="image-link">
               <div class="item">
-                <img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
+                <img  class="img-responsive img-rounded" src="img/slide/表情1f.jpg" alt="">
               </div>
             </a>
-            <a href="img/iphone.png" class="image-link">
+            <a href="img/slide/表情2.jpg" class="image-link">
               <div class="item">
-                <img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
+                <img  class="img-responsive img-rounded" src="img/slide/表情2f.jpg" alt="">
               </div>
             </a>
-            <a href="img/iphone.png" class="image-link">
+            <a href="img/slide/表情3.jpg" class="image-link">
               <div class="item">
-                <img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
+                <img  class="img-responsive img-rounded" src="img/slide/表情3.jpg" alt="">
               </div>
             </a>
           </div>
@@ -249,19 +245,19 @@
             <div class="row">
                 <div class="col-sm-6 wow fadeInLeftBig">
                      <div id="owl-demo-2" class="owl-carousel">
-            <a href="img/iphone.png" class="image-link">
+            <a href="img/slide/范式1.jpg" class="image-link">
               <div class="item">
-                <img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
+                <img  class="img-responsive img-rounded" src="img/slide/范式1f.jpg" alt="">
               </div>
             </a>
-            <a href="img/iphone.png" class="image-link">
+            <a href="img/slide/范式2.jpg" class="image-link">
               <div class="item">
-                <img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
+                <img  class="img-responsive img-rounded" src="img/slide/范式2f.jpg" alt="">
               </div>
             </a>
-            <a href="img/iphone.png" class="image-link">
+            <a href="img/slide/范式3.jpg" class="image-link">
               <div class="item">
-                <img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
+                <img  class="img-responsive img-rounded" src="img/slide/范式3f.jpg" alt="">
               </div>
             </a>
           </div>
@@ -270,7 +266,7 @@
                 <div class="col-sm-6 wow fadeInRightBig"  data-animation-delay="200">
                     <h3 class="section-heading">经典情绪启动范式</h3>
                     <p class="lead">
-                      情绪冲突的研究范式主要有情绪Stroop范式、情绪词—面孔Stroop范式、经典情绪启动范式、情绪Flanker范式和一些其他冲突研究范式。这里主要介绍本实验参考的经典情绪启动范式。
+                      <br/>情绪冲突的研究范式主要有情绪Stroop范式、情绪词—面孔Stroop范式、经典情绪启动范式、情绪Flanker范式和一些其他冲突研究范式。这里主要介绍本实验参考的经典情绪启动范式。
                       <br/>
                      </br/>
 在经典的情绪启动实验中，作为启动刺激的情绪词与作为目标刺激的情绪词，或者具有相同的情绪价，如美好—鲜花；或者具有不同的情绪价，如美好—野兽。结果通常会发现情绪启动效应，即个体对一致条件下的目标词的反应要显著快于不一致条件。
@@ -278,62 +274,62 @@
             </p>
             </div>
 
-      </div>
+         </div>
         </div>
     </div>
 
-    <div id="screen" class="content-section-b">
-          <div class="container">
-            <div class="row" >
-  			 <div class="col-md-6 col-md-offset-3 text-center wrap_title ">
-  				<h2>Screen App</h2>
-  				<p class="lead" style="margin-top:0">A special thanks to Death.</p>
-  			 </div>
-  		  </div>
-  		    <div class="row wow bounceInUp" >
-                <div id="owl-demo" class="owl-carousel">
+    <div id ="实验目的与实验设计" class="content-section-a">
 
-  				<a href="img/slide/1.png" class="image-link">
-  					<div class="item">
-  						<img  class="img-responsive img-rounded" src="img/slide/1.png" alt="Owl Image">
-  					</div>
-  				</a>
+        <div class="container">
 
-                 <a href="img/slide/2.png" class="image-link">
-  					<div class="item">
-  						<img  class="img-responsive img-rounded" src="img/slide/2.png" alt="Owl Image">
-  					</div>
-  				</a>
+            <div class="row">
 
-  				<a href="img/slide/3.png" class="image-link">
-  					<div class="item">
-  						<img  class="img-responsive img-rounded" src="img/slide/3.png" alt="Owl Image">
-  					</div>
-  				</a>
+        <div class="col-sm-6 pull-right wow fadeInRightBig">
+                    <img class="img-responsive " src="img/表情.jpg" alt="">
+                </div>
 
-  				<a href="img/slide/1.png" class="image-link">
-  					<div class="item">
-  						<img  class="img-responsive img-rounded" src="img/slide/1.png" alt="Owl Image">
-  					</div>
-  				</a>
+                <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">
+                    <h3 class="section-heading">实验目的</h3>
+                    <br/>
+                    <p class="lead">
+            利用情绪启动范式考察不同人对于各种表情图片和描述性情绪词语的匹配是否一致；不同性别之间对于各种表情图片和描述性情绪词语匹配是否存在性别差异，结合问卷考察情商高低对表情图片与情绪词的匹配是否具有显著影响。
+          </p>
 
-                 <a href="img/slide/2.png" class="image-link">
-  					<div class="item">
-  						<img  class="img-responsive img-rounded" src="img/slide/2.png" alt="Owl Image">
-  					</div>
-  				</a>
-
-  				<a href="img/slide/3.png" class="image-link">
-  					<div class="item">
-  						<img  class="img-responsive img-rounded" src="img/slide/3.png" alt="Owl Image">
-  					</div>
-  				</a>
                 </div>
             </div>
-          </div>
+        </div>
+        <!-- /.container -->
+    </div>
 
+    <div class="content-section-b">
 
-  	</div>
+    <div class="container">
+            <div class="row">
+              <div class="col-sm-6 wow fadeInRightBig"  data-animation-delay="200">
+                  <h3 class="section-heading">刺激材料和仪器</h3>
+                  <p class="lead">
+                    悲伤图片10张，愉快图片10张；正向词6个，负向词6个，中性词3个。刺激来源于JAFFE人脸表情数据库（该表情库中每幅图像都有原始的表情定义，分为七种表情：中性脸、高兴、悲伤、惊奇、愤怒、厌恶、恐惧）。表情图片的分辨率为256像素x256像素。
+                    <br/>
+                   </br/>
+                   被试双眼与屏幕距离约为150cm，被试坐在离显示器60cm的位置，视角小于3°。
+
+                 </p>
+               </div>
+                <div class="col-sm-6 wow fadeInRightBig"  data-animation-delay="200">
+                    <h3 class="section-heading">程序和任务</h3>
+                    <p class="lead">
+                      本实验采用情绪启动范式，研究先呈现注视点500ms，面部表情图片作为启动刺激，呈现时间为500ms。间隔时间100ms或800ms（间隔时间内呈现注视点“+”），随后要求被试对面部表情与情绪词（靶刺激）进行匹配，与靶刺激共同呈现的是一个干扰刺激（一个与启动刺激不匹配的情绪词）。从而形成评价一致和不一致两种结果，控制SOA分别为600ms或1300ms（SOA 指从启动刺激开始呈现到靶刺激激开始呈现的时间间隔）。研究表明, 当启动刺激与靶刺激效价一致时所需反应时比效价不一致时更短，所以要求被试在尽可能快的时间里进行词语的匹配。
+                      <br/>
+                     </br/>
+                          依据JAFFE人脸表情数据库，本实验共有六种面孔图片与情绪词语的匹配方式：高兴、悲伤、惊奇、愤怒、厌恶、恐惧，练习阶段每种情绪呈现1次，共6个试次。正式实验阶段每种情绪呈现6次，一共36个试次。其中，SOA为600ms与1300ms的情况各一半。
+
+                        </p>
+              </div>
+
+         </div>
+        </div>
+    </div>
+
 
     <div class="content-section-a">
 
@@ -392,13 +388,13 @@
 	</div>
 
 	<!-- Credits -->
-	<div id="credits" class="content-section-a">
+	<div id="结果分析与讨论" class="content-section-a">
 		<div class="container">
 			<div class="row">
 
 			<div class="col-md-6 col-md-offset-3 text-center wrap_title">
-				<h2>Credits</h2>
-				<p class="lead" style="margin-top:0">A special thanks to Death.</p>
+				<h2>结果分析与讨论</h2>
+				<p class="lead" style="margin-top:0">预期结果分析与讨论</p>
 			 </div>
 
 				<div class="col-sm-6  block wow bounceIn">
@@ -407,8 +403,8 @@
 							<i class="fa fa-desktop fa-4x "> </i>
 						</div>
 						<div class="col-md-8 box-ct">
-							<h3> Bootstrap </h3>
-							<p> Lorem ipsum dolor sit ametconsectetur adipiscing elit. Suspendisse orci quam. </p>
+							<h3> 一 </h3>
+							<p> 整理实验数据，并导入统计软件中准备进行下一步处理 </p>
 						</div>
 				  </div>
 			  </div>
@@ -418,8 +414,8 @@
 						<i class="fa fa-picture-o fa-4x "> </i>
 					  </div>
 					  <div class="col-md-8 box-ct">
-						<h3> Owl-Carousel </h3>
-						<p> Nullam mo  arcu ac molestie scelerisqu vulputate, molestie ligula gravida, tempus ipsum.</p>
+						<h3> 二 </h3>
+						<p> 比较两组(平衡空间误差)中“好”和“白人”配对时的平均反应时与“好”和“黑人”配对时的平均反应时的差异以及两组间相同任务的差异，看看有什么结果？</p>
 					  </div>
 					</div>
 			  </div>
@@ -432,8 +428,8 @@
 							<i class="fa fa-magic fa-4x "> </i>
 						</div>
 						<div class="col-md-8 box-ct">
-							<h3> Codrops </h3>
-							<p> Lorem ipsum dolor sit ametconsectetur adipiscing elit. Suspendisse orci quam. </p>
+							<h3> 三 </h3>
+							<p> 预期情商和匹配成绩呈正相关</p>
 						</div>
 				  </div>
 			  </div>
@@ -443,8 +439,8 @@
 						<i class="fa fa-heart fa-4x "> </i>
 					  </div>
 					  <div class="col-md-8 box-ct">
-						<h3> Lorem Ipsum</h3>
-						<p> Nullam mo  arcu ac molestie scelerisqu vulputate, molestie ligula gravida, tempus ipsum.</p>
+						<h3> 四 </h3>
+						<p>男性被试与女性被试匹配成绩无显著差异</p>
 					  </div>
 					</div>
 			  </div>
@@ -468,17 +464,19 @@
   <div  class="content-section-c ">
     <div class="container">
       <div class="row">
-       <div class="col-md-6 col-md-offset-3 text-center wrap_title white">
+       <div class="col-md-6 col-md-offset-3 text-center wrap_title white" >
         <h3>参考文献</h3>
-        <p align="left" class="lead" style="margin-top:0" >
+        <p align="left">
           <br>方平, 陈满琪, & 姜媛. (2006). 情绪启动研究的实验范式. <i/> 心理科学 , 29</i/>(6), 1396-1399.
           <br>吕勇, 张伟娜, & 沈德立. (2010). 不同愉悦度面孔阈下情绪启动效应:来自ERP的证据. <i/>心理学报, 42</i/>(9), 929-938.
           <br>刘晶莹. (2012). <i/>情绪冲突条件下的面部表情识别研究</i/>. (Doctoral dissertation, 西南大学).
           <br>乔建中. (1998). 表情判别能力的发展特点与影响因素. <i/>心理科学,</i/> 52-56.
           <br>邱方晖, 罗跃嘉, & 贾世伟. (2015). 面部表情的类别知觉及其个体差异. <i/>心理科学进展, 23</i/>(6), 946-958.
           <br>蚁金瑶, 钟明天, 罗英姿, 凌宇, & 姚树桥. (2007). 情绪图片的阈下启动效应.<i/> 中国临床心理学杂志, 15</i/>(3), 304-307.
-          <br>Fine, J. G., Semrud-Clikeman, M., & Zhu, D. C. (2009). Gender differences in bold activation to face photographs and video vignettes. <i/>Behavioural Brain Research, 201</i/>(1), 137-146.
-          <br>Huang, J., Chan, R. C., Gollan, J. K., Liu, W., Ma, Z., & Li, Z., et al. (2011). Perceptual bias of patients with schizophrenia in morphed facial expression. <i/>Psychiatry Research, 185</i/>(1-2), 60.
+          <br>De Houwer, J., & Eelen, P. (1998). An affective variant of the simon paradigm. <i/>Cognition and Emotion, 12</i/>(1), 45-61.http://dx.doi.org/10.1080/026999398379772<a href="http://dx.doi.org/10.1080/026999398379772" " target="_blank" title="An affective variant of the simon paradigm." > http://dx.doi.org/10.1080/026999398379772 </a>
+          <br>Fine, J. G., Semrud-Clikeman, M., & Zhu, D. C. (2009). Gender differences in bold activation to face photographs and video vignettes. <i/>Behavioural Brain Research, 201</i/>(1), 137-146.http://dx.doi.org/10.1016/j.bbr.2009.02.009<a href="http://dx.doi.org/10.1016/j.bbr.2009.02.009" " target="_blank" title="Gender differences in bold activation to face photographs and video vignettes" > http://dx.doi.org/10.1016/j.bbr.2009.02.009 </a>
+          <br>Huang, J., Chan, R. C., Gollan, J. K., Liu, W., Ma, Z., & Li, Z., et al. (2011). Perceptual bias of patients with schizophrenia in morphed facial expression. <i/>Psychiatry Research, 185</i/>(1-2), 60.http://dx.doi.org/10.1016/j.psychres.2010.05.017<a href="http://dx.doi.org/10.1016/j.psychres.2010.05.017" " target="_blank" title="Perceptual bias of patients with schizophrenia in morphed facial expression" > http://dx.doi.org/10.1016/j.psychres.2010.05.017 </a>
+          <br>Klinger, M. R., Burton, P. C., & Pitts, G. S. (2000). Mechanisms of unconscious priming: I. response competition, not spreading activation. <i/>Journal of Experimental Psychology: Learning, Memory, and Cognition, 26</i/>(2), 441-455.http://dx.doi.org/10.1037/0278-7393.26.2.441 <a href="http://dx.doi.org/10.1037/0278-7393.26.2.441" " target="_blank" title="Mechanisms of unconscious priming: I. response competition, not spreading activation" > http://dx.doi.org/10.1037/0278-7393.26.2.441 </a>
         </p>
        </div>
       </div>
