--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
 
 
 	<!-- NavBar-->
-	<nav class="navbar-default" role="navigation">
+	<nav class="navbar-default" role="navigation" style="position: relative; top: 100px;">
     <div class="container">
+      <img class="rotate" src="img/logo.png" alt="Generic placeholder image" width="66" height="66">
       <img class="rotate" src="img/logo.png" alt="Generic placeholder image" width="66" height="66">
       <img class="rotate" src="img/logo.png" alt="Generic placeholder image" width="66" height="66">
       <img class="rotate" src="img/logo.png" alt="Generic placeholder image" width="66" height="66">
@@ -87,7 +88,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#home">面部表情</a>
+				<a class="navbar-brand" href="#home">HOME</a>
 			</div>
 
 			<div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
@@ -96,7 +97,7 @@
 					<li class="menuItem"><a href="#关键词">关键词</a></li>
 					<li class="menuItem"><a href="#实验背景知识">实验背景知识</a></li>
 					<li class="menuItem"><a href="#实验目的与实验设计">实验目的与设计</a></li>
-					<li class="menuItem"><a href="#结果分析与讨论">结果分析与讨论</a></li>
+					<li class="menuItem"><a href="#结果与讨论">结果与讨论</a></li>
 				</ul>
 			</div>
 
@@ -284,7 +285,7 @@
 
             <div class="row">
 
-        <div class="col-sm-6 pull-right wow fadeInRightBig">
+                <div class="col-sm-6 pull-right wow fadeInRightBig">
                     <img class="img-responsive " src="img/表情.jpg" alt="">
                 </div>
 
@@ -293,7 +294,7 @@
                     <br/>
                     <p class="lead">
             利用情绪启动范式考察不同人对于各种表情图片和描述性情绪词语的匹配是否一致；不同性别之间对于各种表情图片和描述性情绪词语匹配是否存在性别差异，结合问卷考察情商高低对表情图片与情绪词的匹配是否具有显著影响。
-          </p>
+                    </p>
 
                 </div>
             </div>
@@ -322,40 +323,11 @@
                       <br/>
                      </br/>
                           依据JAFFE人脸表情数据库，本实验共有六种面孔图片与情绪词语的匹配方式：高兴、悲伤、惊奇、愤怒、厌恶、恐惧，练习阶段每种情绪呈现1次，共6个试次。正式实验阶段每种情绪呈现6次，一共36个试次。其中，SOA为600ms与1300ms的情况各一半。
-
-                        </p>
+                    </p>
               </div>
 
          </div>
         </div>
-    </div>
-
-
-    <div class="content-section-a">
-
-        <div class="container">
-
-             <div class="row">
-
-				<div class="col-sm-6 pull-right wow fadeInRightBig">
-                    <img class="img-responsive " src="img/doge.png" alt="">
-                </div>
-
-                <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">
-                    <h3 class="section-heading">Font Awesome & Glyphicon</h3>
-                    <p class="lead">A special thanks to Death to the Stock Photo for
-					providing the photographs that you see in this template.
-					</p>
-
-					<ul class="descp lead2">
-						<li><i class="glyphicon glyphicon-signal"></i> Reliable and Secure Platform</li>
-						<li><i class="glyphicon glyphicon-refresh"></i> Everything is perfectly orgainized for future</li>
-						<li><i class="glyphicon glyphicon-headphones"></i> Attach large file easily</li>
-					</ul>
-				</div>
-            </div>
-        </div>
-
     </div>
 
 
@@ -364,19 +336,15 @@
 		<div class="container">
 			<div class="row">
 			<div class="col-md-6 col-md-offset-3 text-center wrap_title white">
-				<h2>Get Live Updates</h2>
-				<p class="lead" style="margin-top:0">A special thanks to Death.</p>
+				<p class="lead" style="margin-top:0">  </p>
 			 </div>
 			<div class="mockup-content">
 					<div class="morph-button wow pulse morph-button-inflow morph-button-inflow-1">
-						<button type="button "><span>Subscribe to our Newsletter</span></button>
 						<div class="morph-content">
 							<div>
-								<div class="content-style-form content-style-form-4 ">
-									<h2 class="morph-clone">Subscribe to our Newsletter</h2>
+								<div>
 									<form>
-										<p><label>Your Email Address</label><input type="text"/></p>
-										<p><button>Subscribe me</button></p>
+										<p><button></button></p>
 									</form>
 								</div>
 							</div>
@@ -388,13 +356,13 @@
 	</div>
 
 	<!-- Credits -->
-	<div id="结果分析与讨论" class="content-section-a">
+	<div id="结果与讨论" class="content-section-a">
 		<div class="container">
 			<div class="row">
 
 			<div class="col-md-6 col-md-offset-3 text-center wrap_title">
-				<h2>结果分析与讨论</h2>
-				<p class="lead" style="margin-top:0">预期结果分析与讨论</p>
+				<h2>结果与讨论</h2>
+				<p class="lead" style="margin-top:0">预期结果与讨论</p>
 			 </div>
 
 				<div class="col-sm-6  block wow bounceIn">
@@ -490,27 +458,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-7">
-            <h3 class="footer-title">Follow Me!</h3>
-            <p>Vuoi ricevere news su altri template?<br/>
-              Visita Andrea Galanti.it e vedrai tutte le news riguardanti nuovi Theme!<br/>
-              Go to: <a  href="http://andreagalanti.it" target="_blank">andreagalanti.it</a> More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a>
-            </p>
-
-
-			<!-- LICENSE -->
-			<a rel="cc:attributionURL" href=""
-		   property="dc:title">Flatfy Theme </a> by
-		   <a rel="dc:creator" href=""
-		   property="cc:attributionName">Andrea Galanti</a>
-		   is licensed to the public under
-		   <BR>the <a rel="license"
-		   href="http://creativecommons.org/licenses/by-nc/3.0/it/deed.it">Creative
-		   Commons Attribution 3.0 License - NOT COMMERCIAL</a>.
-
-
+            <h3 class="footer-title">Copyright © 2017</h3>
           </div> <!-- /col-xs-7 -->
-
-
         </div>
       </div>
     </footer>
